Wed Feb 20 09:04:58 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: avoid duplicate case

Fri Feb 15 11:25:46 EST 2008	JK Lowden <jklowden@freetds.org>
	* src/dblib/dblib.c src/tds/convert.c
	- support SYBUNIQUE printable width

Fri Feb 15 12:05:48 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: fix SQL_ATTR_CONNECTION_DEAD

Fri Feb 15 11:53:41 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac: fix nasty problem with HP-UX

Wed Feb 13 09:50:35 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/bsqlodbc.c: fix memory error
	* src/tds/query.c: remove possible buffer underflow
	* src/odbc/unittests/test64.c: truncate upper part for low

Fri Feb 08 10:26:36 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/describecol.in:
	* src/odbc/unittests/params.c src/odbc/unittests/putdata.c:
	* src/odbc/unittests/raiserror.c src/odbc/unittests/rownumber.c:
	* src/odbc/unittests/t0001.c src/odbc/unittests/t0002.c:
	* src/odbc/unittests/testodbc.c src/odbc/unittests/timeout3.c:
	- more reuse and unification

Fri Feb 08 09:30:48 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/rpc.c: reuse code and macros

Wed Feb 06 09:28:55 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/testodbc.c: simplify

Wed Feb 06 09:27:10 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/rpc.c src/odbc/unittests/cursor5.c:
	* src/odbc/unittests/cursor4.c src/odbc/unittests/cursor3.c:
	- use printf instead of fprintf(stdout...)

Tue Feb 05 15:59:04 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/t0007.c:
	- improve SYBINT8 conversions testing

Mon Feb 04 08:49:58 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: fix silly memory leak

Thu Jan 21 10:12:42 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>