@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="iso-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<!-- $Id: news.html,v 1.13 2008/01/17 22:57:27 jklowden Exp $ -->
+<!-- $Id: news.html,v 1.14 2008/02/28 23:27:10 jklowden Exp $ -->
 <head>
 <title>FreeTDS.org</title>
 </head>
@@ -31,6 +31,19 @@ News&nbsp;&nbsp;|&nbsp;
 <font size="+3"><b>N</b></font>ews and <font size="+3"><b>P</b></font>ress
 </p>
 <table summary="layout" width="80%" align="center">
+
+<!--  item  -->
+<tr bgcolor="#c9c9ff"><td>Second Release Candidate available for 0.82</td></tr>
+<tr>
+<td>
+<br />
+Version 0.82RC2 is now available from 
+<a href="ftp://ftp.ibiblio.org/pub/Linux/ALPHA/freetds/current/freetds-rc.tgz">
+ftp.ibiblio.org</a>.  
+<br />
+<br />
+</td>
+</tr>
 
 <!--  item  -->
 <tr bgcolor="#c9c9ff"><td>FreeTDS enters release process for Version 0.82</td></tr>
